@@ -27,4 +27,7 @@
   <nz-card nzTitle="Auto space stations" nzSize="small" style="width: 270px;">
     <app-auto-space></app-auto-space>
   </nz-card>
+  <nz-card nzTitle="Auto surrender" nzSize="small" style="width: 270px;">
+    <app-auto-surrender></app-auto-surrender>
+  </nz-card>
 </div>
