@@ -27,7 +27,9 @@
       </td>
     </tr>
     <tr>
-      <td class="fleet-td-1"><span>Strength</span></td>
+      <td class="fleet-td-1">
+        <span nz-tooltip nzTooltipTitle="Strength">Str.</span>
+      </td>
       <td *ngFor="let i of fleets">
         <span class="monospace">
           {{
