@@ -175,7 +175,7 @@
     <span>Prestige</span>
   </li>
   <li
-    *ngIf="!ms.game.firstRun || ms.game.enemyManager.maxLevel > 3"
+    *ngIf="!ms.game.firstRun || ms.game.enemyManager.maxLevel > 1"
     nz-menu-item
     nzMatchRouter
     routerLink="expShop"
